Possible fix for iPhone background now stretching in landscape round 2.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -86,6 +86,10 @@ body::before {
   position: fixed;
   will-change: transform;
   z-index: -1;
+  -webkit-background-size: 100%;
+  -moz-background-size: 100%;
+  -o-background-size: 100%;
+  background-size: 100%;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
